--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2? family= Berkshire+Swash & family= Dancing+Script & family= Poppins:wght@300 & display=swap');
 
 *{
     padding: 0;
@@ -24,9 +25,14 @@ header{
 header h1{
     color: #dc3545;
     font-size: 2.5rem;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Berkshire Swash', cursive;
 }
 header span{
     color: #fff;
+    font-family: 'Berkshire Swash', cursive;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Dancing Script', cursive;
 }
 header .navegacao-primaria{
     display: flex;
@@ -85,7 +91,6 @@ header .navegacao-primaria li a:hover::after{
     color: #fff;
     padding: 15px 40px;
     border-radius: 5px;
-    border: 2px solid white;
 }
 .section-div img{
     max-width: 100%;
@@ -96,6 +101,16 @@ header .navegacao-primaria li a:hover::after{
     margin-left: 5px;
     opacity: 1;
     animation: pisca .5s infinite;
+}
+.download a{
+    font-size: 18px;
+    font-family: 'Poppins';
+    background-color: rgb(31, 29, 29);
+}
+.download a:hover{
+    color: rgb(247, 244, 244);
+    background-color: #707070;
+    border: 2px solid white;
 }
 
 @keyframes pisca{
@@ -207,6 +222,7 @@ main .sobre{
     font-size: 1.3rem;
     grid-row: 2;
     grid-column: 1/-1;
+    font-family:'Poppins';
 }
 .sobre-info {
     margin-top: 30px;
@@ -224,6 +240,9 @@ main .sobre{
 }
 .sobre-info p{
     font-size: .9rem;
+}
+.download a{
+    font-size: 12px;
 }
 
 @keyframes sobeSecao {
@@ -550,8 +569,14 @@ footer{
     background-color: #3e3d3d;
     height: 30%;
 }
-.footer_social li i:hover{
-    color: #dc3545;
+.g i:hover{
+    color: #050203;
+}
+.l i:hover{
+    color: #0a66c2;
+}
+.w i:hover{
+    color: #2df704;
 }
 .footer_social::before{
     content: '';
