--- a/style.css
+++ b/style.css
@@ -669,3 +669,94 @@ footer .footer_comercial {
     font-size: 1rem;
     font-family: 'Poppins';
 }
+
+/*cards apresentação de projetos*/
+/* .cards {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    color: #707070;
+    margin-left:  25px;
+    margin-top: 20px;
+} */
+
+ .car {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+ .cards {
+    display: flex;
+    margin-top: 25px;
+    position: relative;
+    width: 250px;
+    height: 300px;
+    transform-style: preserve-3d;
+    margin: 20px;
+   
+}
+
+.cards .face {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 2s ease-in-out;
+    backface-visibility: hidden;
+    transform: perspective(500px) rotateY(0deg);
+   
+}
+ .cards .front {
+    background: rgb(34,193,195);
+    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+    border-radius: 15px;
+    color: #fff;
+    text-align: center;
+    justify-content: center;
+    font-family: 'Poppins';
+    font-weight: 900;
+} 
+
+.cards .back {
+    background: rgb(181,181,209);
+    background: radial-gradient(circle, rgba(181,181,209,1) 0%, rgba(191,42,42,0.9780287114845938) 88%);
+    color: #ddd;
+    transform: perspective(500px) rotateY(180deg);
+    border-radius: 15px;
+    text-align: center;
+    justify-content: center;
+    font-family: 'Poppins';
+    font-weight: 900;
+} 
+
+ .cards:hover .face.front {
+    transform: perspective(500px) rotateY(180deg);
+} 
+
+.cards:hover .face.back {
+    transform: perspective(500px) rotateY(360deg);
+}  
+.cards .face h2 {
+    font-size: 1em;
+    transform: perspective(500px) translateZ(50px);
+}
+
+/*responsividade do card de projetos */
+
+@media(max-width: 992px) {
+    .car {
+        justify-content: center;
+        align-items: center;
+        display: block;
+        margin-left: 40px;
+
+    }
+}
